--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "gulp-gh-pages": "^0.5.4",
     "gulp-sass": "^4.0.2",
     "node-sass": "^4.12.0"
+  },
+  "dependencies": {
+    "simple-parallax-js": "^5.1.0"
   }
 }
